--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ ul {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 300px;
+    width: 1000px;
     /* background: rgba(245, 245, 245, 0.50);
     backdrop-filter: blur(82.5px); */
 }
@@ -83,7 +83,7 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 70px;
 }
 
 .three__title {
@@ -203,5 +203,51 @@ ul {
     border: 1px solid black;
     font-size: 2em;
 } */
- 
+.footer-content {
+    max-width: 1000px;
+}
 
+.footer-logo {
+    width: 130px;
+}
+
+.top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* margin-bottom: 10px; */
+}
+
+.logo-bl {
+    display: flex;
+    align-items: center;
+}
+
+.socials {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-right: 22px;
+}
+
+.social {
+    width: 52px;
+}
+
+hr {
+    max-width: 1000px;
+    color: black;
+    margin: 0 auto;
+    
+}
+
+.bottom {
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.bottom h3 {
+    color: gray;
+    font-size: 17px;
+    font-weight: 500;
+}
