--- a/style/style.css
+++ b/style/style.css
@@ -223,11 +223,24 @@ ul {
     align-items: center;
 }
 
+.s-t {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 22px;
+}
+
+.socials-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: red;
+}
+
 .socials {
     display: flex;
     align-items: center;
-    gap: 20px;
-    margin-right: 22px;
+    gap: 15px;
 }
 
 .social {
