--- a/style/style.css
+++ b/style/style.css
@@ -234,7 +234,7 @@ ul {
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 10px;
-    color: red;
+    color: rgb(6, 125, 83);
 }
 
 .socials {
