--- a/style/contact.css
+++ b/style/contact.css
@@ -47,3 +47,150 @@
     font-size: 23px;
     color: darkred;
   }
+  
+  .main-content {
+    display: flex;
+    align-items: center;
+  }
+  
+  .fourth__bottom {
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 25px;
+    box-shadow: #000 0 0 10px 1px;
+  }
+  
+  .contact {
+    margin: 50px 120px 100px 0;
+  }
+  
+  .contact2 {
+    width: 500px;
+  }
+  
+  .bottom__titles {
+    color: #000;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 28px;
+    margin-bottom: 5px;
+    background-color: #fff;
+}
+
+.bottom__inputs {
+    width: 556px;
+    padding: 18px 30px;
+    border-radius: 14px;
+    border: 1px solid #000;
+    background: #FFF;
+    margin-bottom: 25px;
+    outline: 0;
+}
+
+.bottom__inputs::placeholder {
+    color: #898989;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.bottom__input {
+    display: flex;
+    max-width: 556px;
+    width: 100%;
+    height: 190px;
+    border-radius: 14px;
+    border: 1px solid #000;
+    background: #FFF;
+    padding: 18px 30px;
+    margin-bottom: 40px;
+    outline: 0;
+    
+}
+
+.bottom__input::placeholder {
+    color: #898989;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.btn__two {
+    max-width: 556px;
+    width: 100%;
+    color: #FFF;
+    font-size: 20px;
+    line-height: 28px;
+    padding: 20px 35px;
+    border-radius: 14px;
+    background: var(--dark, #191A23);
+    transition: 0.15s;
+    border: 2px solid black;
+}
+
+.btn__two:hover {
+  transition: 0.15s;
+  color: #000;
+  background-color: chartreuse;
+}
+  
+  
+  .footer-content {
+    max-width: 1000px;
+  }
+  
+  .footer-logo {
+    width: 130px;
+  }
+  
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* margin-bottom: 10px; */
+  }
+  
+  .logo-bl {
+    display: flex;
+    align-items: center;
+  }
+  
+  .s-t {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 22px;
+  }
+  
+  .socials-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: rgb(6, 125, 83);
+  }
+  
+  .socials {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+  
+  .social {
+    width: 52px;
+  }
+  
+  hr {
+    max-width: 1000px;
+    color: black;
+    margin: 0 auto;
+    
+  }
+  
+  .bottom {
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+  
+  .bottom h3 {
+    color: gray;
+    font-size: 17px;
+    font-weight: 500;
+  }
