--- a/style/contact.css
+++ b/style/contact.css
@@ -58,7 +58,7 @@
   }
   
   .contact {
-    margin: 50px 120px 100px 0;
+    margin: 50px 0 100px 0;
   }
   
   .contact2 {
@@ -132,4 +132,54 @@
 
 
 
+@media(max-width: 1300px) {
+  .contact2 {
+    width: 400px;
+  }
+  .main-content {
+    display: flex;
+    justify-content: center;
+  }
+  .bottom__inputs {
+    width: 500px;
+  }
+}
 
+@media(max-width: 1100px) {
+  .bottom__inputs {
+    width: 400px;
+  }
+  .btn__two {
+    font-size: 18px;
+    padding: 14px 20px;
+  }
+}
+
+@media(max-width: 1000px) {
+  .contact2 {
+    width: 300px;
+  }
+}
+
+@media(max-width: 900px) {
+  .contact2 {
+    display: none;
+  }
+}
+
+@media(max-width: 550px) {
+  .bottom__inputs {
+    width: 300px;
+  }
+}
+
+@media(max-width: 450px) {
+  .fourth__bottom {
+    box-shadow: none;
+    background-color: lightyellow;
+    padding: 0;
+  }
+  .bottom__titles {
+    background-color: lightyellow;
+  }
+}
